@@ -12,7 +12,7 @@
 ## Author: |cff00ff00ALA|r
 ## Author-zhCN: |cff00ff00ALA|r
 ## Author-zhTW: |cff00ff00ALA|r
-## Version: 1110r.250422
+## Version: 1110r.250428
 ## X-Curse-Project-ID: 324936
 
 
